Step 14 - Create k8s secrets,  helm charts and publish them to Gitea/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: 172-236-212-71.ip.linodeusercontent.com/test/flaskdemoapi@sha256:2a48d1573245435325ce9bfa4517930db00a95aa0318b5e765a0c1b915cef1b9 # Custom Harbor registry
          ports:
            - containerPort: 5000 # Application's listening port
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80        # Exposed service port
      targetPort: 5000    # Application's listening port
  type: ClusterIP         # ClusterIP for Traefik compatibility
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - "*.akmworkshop.eu"  # The domain for the wildcard certificate
      secretName: wildcard-cert # Reference the Secret containing the wildcard certificate
  rules:
    - host: "*.akmworkshop.eu"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
    - host: "*.labs.akamaiuiweb.com"  # Rule for akmuniversity.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
